[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "receiptbuddy-common"
version = "1.0.0"
description = "Shared library for ReceiptBuddy microservices"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "httpx>=0.27.2",
    "minio>=7.2.8",
]

[tool.setuptools.packages.find]
include = ["common*"]
